theme.css
/*!
 * Solarized
 *
 * URL: https://github.com/thelounge/lounge-theme-solarized
 * License: MIT
 */

::-webkit-scrollbar {
	display: none;
}

::-moz-placeholder {
	color: rgba(131, 148, 150, 0.9);
	opacity: 1;
}

::-webkit-input-placeholder {
	color: rgba(131, 148, 150, 0.9);
}

:-ms-input-placeholder {
	color: rgba(131, 148, 150, 0.9);
}

i.hostmask {
	font-size: 90%;
	opacity: 0.7;
}

/* Hide nick (and edit) in input bar, not ideal */
#nick {
	display: none;
}

.context-menu,
.textcomplete-menu {
	border: 0;
}

.context-menu-item:hover,
.textcomplete-item:hover,
.textcomplete-menu .active,
.textcomplete-menu .active a,
#chat .sidebar,
body {
	background-color: #051114;
	color: #fff;
}

#chat a {
	color: #268bd2;
}

#chat .date-marker,
#chat .unread-marker {
	opacity: 1;
}

#chat .date-marker::before {
	border-color: #acf046;
}

#chat .date-marker-text::before {
	background-color: #051114;
	color: #acf046;
}

#chat .unread-marker::before {
	border-color: #268bd2;
}

#chat .unread-marker-text::before {
	background-color: #051114;
	color: #268bd2;
}

#viewport .lt::after {
	border-color: #002b36;
}

#chat .show-more-button {
	background: rgba(88, 110, 117, 0.3);
	color: #fff;
	border: 0;
	border-radius: 0;
	text-transform: uppercase;
	transition: background 0.2s;
}

#chat .show-more-button:hover {
	background: #84ce88;
}

.btn-reconnect {
	background: #e74c3c;
	color: #fff;
	border: 0;
	border-radius: 0;
	margin: 0;
}

#input,
#windows #form .input,
#form,
#chat .count,
#windows .window {
	background-color: inherit;
}

#sidebar .chan,
#sidebar .chan-placeholder {
	padding: 8px 20px;
}

#sidebar .chan:first-child {
	color: #268bd2;
}

#sidebar .badge {
	font-size: 12px;
	margin-top: 0;
}

/* Hide close button on channels and lobbies, it is not used that frequently */
#sidebar .chan.lobby .close,
#sidebar .chan.channel .close {
	display: none;
}

#sidebar .chan .name::after {
	background: linear-gradient(to right, rgba(69, 81, 100, 0) 0%, #002b36 100%);
}

#sidebar .chan:first-child::after {
	content: ' ';
	display: block;
	height: 2px;
	background-color: #268bd2;
	width: 25px;
	margin-top: 8px;
}

#sidebar .chan:first-child:hover::after,
#sidebar .chan:first-child.active::after {
	background-color: #3d99db;
}

#sidebar .chan:first-child:hover,
#sidebar .chan:first-child.active {
	color: #3d99db;
}

#sidebar .chan::before,
#chat .title::before {
	content: none !important;
}

#sidebar {
	background-color: #002b36;
	width: 200px;
	bottom: 43px;
}

#footer {
	background-color: #002b36;
	width: 200px;
	height: 43px;
}

#main {
	left: 200px;
}

#viewport.menu-open {
	-webkit-transform: translate3d(200px, 0, 0);
	transform: translate3d(200px, 0, 0);
}

#chat .time {
	color: #586e75;
}

#chat .user-mode::before,
#form,
#windows .header,
#chat .from,
#chat .sidebar {
	border-color: #002b36;
}

#chat .search,
#windows #form .input {
	border: 0;
	color: #fff;
}

#chat.colored-nicks .user.color-1,
#chat.colored-nicks .user.color-17 {
	color: #ef4657;
}

#chat.colored-nicks .user.color-2,
#chat.colored-nicks .user.color-18 {
	color: #ff93a4;
}

#chat.colored-nicks .user.color-3,
#chat.colored-nicks .user.color-19 {
	color: #ffb03b;
}

#chat.colored-nicks .user.color-4,
#chat.colored-nicks .user.color-20 {
	color: #cc7d08;
}

#chat.colored-nicks .user.color-5,
#chat.colored-nicks .user.color-21 {
	color: #ffd34e;
}

#chat.colored-nicks .user.color-6,
#chat.colored-nicks .user.color-22 {
	color: #cca01b;
}

#chat.colored-nicks .user.color-7,
#chat.colored-nicks .user.color-23 {
	color: #acf046;
}

#chat.colored-nicks .user.color-8,
#chat.colored-nicks .user.color-24 {
	color: #d5f572;
}

#chat.colored-nicks .user.color-9,
#chat.colored-nicks .user.color-25 {
	color: #499e8d;
}

#chat.colored-nicks .user.color-10,
#chat.colored-nicks .user.color-26 {
	color: #b5ffe1;
}

#chat.colored-nicks .user.color-11,
#chat.colored-nicks .user.color-27 {
	color: #35a7ff;
}

#chat.colored-nicks .user.color-12,
#chat.colored-nicks .user.color-28 {
	color: #91a6ff;
}

#chat.colored-nicks .user.color-13,
#chat.colored-nicks .user.color-29 {
	color: #8a46f0;
}

#chat.colored-nicks .user.color-14,
#chat.colored-nicks .user.color-30 {
	color: #ff88dc;
}

#chat.colored-nicks .user.color-15,
#chat.colored-nicks .user.color-31 {
	color: #bd8d46;
}

#chat.colored-nicks .user.color-16,
#chat.colored-nicks .user.color-32 {
	color: #f0c079;
}

#chat .channel .highlight,
#chat .channel .highlight .time,
#chat .channel .highlight .from,
#chat .channel .highlight .from .user,
#chat .channel .highlight .text {
	color: #fff;
}

#chat .channel .highlight .time,
#chat .channel .highlight .from {
	background-color: #ad1457;
	border-color: #ad1457;
}

#chat .msg .text .user {
	border-bottom: 1px dotted #555;
}

#windows .header .topic,
#chat table.channel-list td {
	color: #999;
}

#chat table.channel-list th,
#chat table.ban-list th,
#chat table.channel-list td,
#chat table.ban-list td {
	border-bottom-color: #002b36;
}

#chat .toggle-content {
	background-color: #002b36;
	color: #99a2b4;
}

#chat .toggle-button:hover {
	color: #fff;
	opacity: 1;
}

/* Increase contrast of some IRC colors */
.irc-fg2 { color: #0074d9; }
.irc-fg5 { color: #e969a7; }
.irc-fg12 { color: #50a8ff; }

@media (max-width: 768px) {
	#main {
		left: 0;
	}

	#sidebar,
	#footer {
		left: -200px;
	}
}

@media (max-width: 479px) {
	#chat .message .user::before {
		content: "<";
	}

	#chat .message .user::after {
		content: ">";
	}
}

@media (min-width: 480px) {
	#chat .from::after {
		background: linear-gradient(to right, rgba(5, 17, 20, 0.5) 0%, #051114 100%);
	}

	#chat .channel .highlight .from::after {
		background: linear-gradient(to right, rgba(173, 20, 87, 0.5) 0%, #ad1457 100%);
	}
}

